docs/book/samples/appc/spacing_check.out
error[formatting]: canonical form requires exactly one space here
  --> spacing_check.kso:2:9
   2 |   answer=42
               ^
error[formatting]: canonical form requires exactly one space here
  --> spacing_check.kso:2:10
   2 |   answer=42
                ^
